log
Thu 05 Oct 2023 03:07:23 PM UTC: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c1f4d43
Thu 05 Oct 2023 03:07:42 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d0dd10b
Thu 05 Oct 2023 03:10:21 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
daaec0e
Thu 05 Oct 2023 03:20:34 PM UTC: 
 sudoku.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  2|4
total_score: 15/70
76803a7
Thu 05 Oct 2023 03:26:57 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:70:29: error: ‘subMatriz’ undeclared (first use in this function)
   70 |             marca_subMatriz[subMatriz][num] = 1;
      |                             ^~~~~~~~~
sudoku.c:70:29: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:70:40: error: ‘num’ undeclared (first use in this function)
   70 |             marca_subMatriz[subMatriz][num] = 1;
      |                                        ^~~
sudoku.c: At top level:
sudoku.c:74:5: error: expected identifier or ‘(’ before ‘return’
   74 |     return 1;
      |     ^~~~~~
sudoku.c:75:1: error: expected identifier or ‘(’ before ‘}’ token
   75 | }
      | ^
sudoku.c: In function ‘is_valid’:
sudoku.c:72:5: error: control reaches end of non-void function [-Werror=return-type]
   72 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
3b65ec5
Thu 05 Oct 2023 03:28:10 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
53e0ba0
Fri 06 Oct 2023 09:36:47 PM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  5|3
total_score: 35/70
f44a716
Fri 06 Oct 2023 09:40:59 PM UTC: 
 sudoku.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
 tests:  6|2
total_score: 45/70
313e068
